PA3/cool.output
Terminals unused in grammar

   ERROR
   '`'


Rules useless in parser due to conflicts

   54 let_expr_list: %empty


State 9 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce
State 15 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 68 conflicts: 9 shift/reduce
State 84 conflicts: 1 shift/reduce
State 105 conflicts: 2 shift/reduce
State 113 conflicts: 1 shift/reduce
State 132 conflicts: 9 shift/reduce
State 133 conflicts: 2 shift/reduce
State 138 conflicts: 1 shift/reduce
State 144 conflicts: 9 shift/reduce
State 148 conflicts: 9 shift/reduce
State 153 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: %empty
    7             | feature
    8             | feature_list feature

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID '(' ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'

   13 formal_list: %empty
   14            | formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 expr: %empty
   18     | OBJECTID ASSIGN expr
   19     | expr '.' OBJECTID '(' expr_list ')'
   20     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   21     | expr '.' OBJECTID '(' ')'
   22     | expr '@' TYPEID '.' OBJECTID '(' ')'
   23     | OBJECTID '(' expr_list ')'
   24     | OBJECTID '(' ')'
   25     | IF expr THEN expr ELSE expr FI
   26     | WHILE expr LOOP expr POOL
   27     | '{' expr_list_2 '}'
   28     | LET OBJECTID ':' TYPEID IN expr
   29     | LET OBJECTID ':' TYPEID ASSIGN expr IN expr
   30     | LET OBJECTID ':' TYPEID ASSIGN expr let_expr_list IN expr
   31     | LET OBJECTID ':' TYPEID let_expr_list IN expr
   32     | CASE expr OF case_list ESAC
   33     | NEW TYPEID
   34     | ISVOID expr
   35     | expr '+' expr
   36     | expr '-' expr
   37     | expr '*' expr
   38     | expr '/' expr
   39     | '~' expr
   40     | expr '<' expr
   41     | expr LE expr
   42     | expr '=' expr
   43     | NOT expr
   44     | '(' expr ')'
   45     | OBJECTID
   46     | INT_CONST
   47     | STR_CONST
   48     | BOOL_CONST

   49 expr_list: expr
   50          | expr_list ',' expr

   51 expr_list_2: expr_2
   52            | expr_list_2 expr_2

   53 expr_2: expr ';'

   54 let_expr_list: %empty
   55              | let
   56              | let_expr_list let

   57 let: ',' OBJECTID ':' TYPEID
   58    | ',' OBJECTID ':' TYPEID ASSIGN expr

   59 case_list: %empty
   60          | case_
   61          | case_list case_

   62 case_: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 10 19 20 21 22 23 24 44
')' (41) 9 10 19 20 21 22 23 24 44
'*' (42) 37
'+' (43) 35
',' (44) 15 50 57 58
'-' (45) 36
'.' (46) 19 20 21 22
'/' (47) 38
':' (58) 9 10 11 12 16 28 29 30 31 57 58 62
';' (59) 4 5 9 10 11 12 53 62
'<' (60) 40
'=' (61) 42
'@' (64) 20 22
'`' (96)
'{' (123) 4 5 9 10 27
'}' (125) 4 5 9 10 27
'~' (126) 39
error (256)
CLASS (258) 4 5
ELSE (259) 25
FI (260) 25
IF (261) 25
IN (262) 28 29 30 31
INHERITS (263) 5
LET (264) 28 29 30 31
LOOP (265) 26
POOL (266) 26
THEN (267) 25
WHILE (268) 26
CASE (269) 32
ESAC (270) 32
OF (271) 32
DARROW (272) 62
NEW (273) 33
ISVOID (274) 34
STR_CONST (275) 47
INT_CONST (276) 46
BOOL_CONST (277) 48
TYPEID (278) 4 5 9 10 11 12 16 20 22 28 29 30 31 33 57 58 62
OBJECTID (279) 9 10 11 12 16 18 19 20 21 22 23 24 28 29 30 31 45 57
    58 62
ASSIGN (280) 12 18 29 30 58
NOT (281) 43
LE (282) 41
ERROR (283)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3, on right: 1 3
class (49)
    on left: 4 5, on right: 2 3
feature_list (50)
    on left: 6 7 8, on right: 4 5 8
feature (51)
    on left: 9 10 11 12, on right: 7 8
formal_list (52)
    on left: 13 14 15, on right: 9 15
formal (53)
    on left: 16, on right: 14 15
expr (54)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43 44 45 46 47 48, on right: 9 10 12 18
    19 20 21 22 25 26 28 29 30 31 32 34 35 36 37 38 39 40 41 42 43
    44 49 50 53 58 62
expr_list (55)
    on left: 49 50, on right: 19 20 23 50
expr_list_2 (56)
    on left: 51 52, on right: 27 52
expr_2 (57)
    on left: 53, on right: 51 52
let_expr_list (58)
    on left: 54 55 56, on right: 30 31 56
let (59)
    on left: 57 58, on right: 55 56
case_list (60)
    on left: 59 60 61, on right: 32 61
case_ (61)
    on left: 62, on right: 60 61


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (feature_list)]
    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 12
    feature       go to state 13


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 11

    9 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID . '(' ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 15
    ':'  shift, and go to state 16


State 12

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 17

    feature  go to state 18


State 13

    7 feature_list: feature .

    $default  reduce using rule 7 (feature_list)


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (feature_list)]
    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 19
    feature       go to state 13


State 15

    9 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID '(' . ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 20
    ')'       shift, and go to state 21

    ')'       [reduce using rule 13 (formal_list)]
    $default  reduce using rule 13 (formal_list)

    formal_list  go to state 22
    formal       go to state 23


State 16

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 24


State 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 25


State 18

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 26

    feature  go to state 18


State 20

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 27


State 21

   10 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 28


State 22

    9 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 29
    ','  shift, and go to state 30


State 23

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


State 24

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 31
    ';'     shift, and go to state 32


State 25

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 33


State 27

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 34


State 28

   10 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 35


State 29

    9 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 36


State 30

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 20

    formal  go to state 37


State 31

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51

    $default  reduce using rule 17 (expr)

    expr  go to state 52


State 32

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


State 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 34

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 35

   10 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 53


State 36

    9 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 54


State 37

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


State 38

   25 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51

    $default  reduce using rule 17 (expr)

    expr  go to state 55


State 39

   28 expr: LET . OBJECTID ':' TYPEID IN expr
   29     | LET . OBJECTID ':' TYPEID ASSIGN expr IN expr
   30     | LET . OBJECTID ':' TYPEID ASSIGN expr let_expr_list IN expr
   31     | LET . OBJECTID ':' TYPEID let_expr_list IN expr

    OBJECTID  shift, and go to state 56


State 40

   26 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51

    $default  reduce using rule 17 (expr)

    expr  go to state 57


State 41

   32 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51

    $default  reduce using rule 17 (expr)

    expr  go to state 58


State 42

   33 expr: NEW . TYPEID

    TYPEID  shift, and go to state 59


State 43

   34 expr: ISVOID . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51

    $default  reduce using rule 17 (expr)

    expr  go to state 60


State 44

   47 expr: STR_CONST .

    $default  reduce using rule 47 (expr)


State 45

   46 expr: INT_CONST .

    $default  reduce using rule 46 (expr)


State 46

   48 expr: BOOL_CONST .

    $default  reduce using rule 48 (expr)


State 47

   18 expr: OBJECTID . ASSIGN expr
   23     | OBJECTID . '(' expr_list ')'
   24     | OBJECTID . '(' ')'
   45     | OBJECTID .

    ASSIGN  shift, and go to state 61
    '('     shift, and go to state 62

    $default  reduce using rule 45 (expr)


State 48

   43 expr: NOT . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51

    $default  reduce using rule 17 (expr)

    expr  go to state 63


State 49

   27 expr: '{' . expr_list_2 '}'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51

    $default  reduce using rule 17 (expr)

    expr         go to state 64
    expr_list_2  go to state 65
    expr_2       go to state 66


State 50

   44 expr: '(' . expr ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51

    $default  reduce using rule 17 (expr)

    expr  go to state 67


State 51

   39 expr: '~' . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51

    $default  reduce using rule 17 (expr)

    expr  go to state 68


State 52

   12 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   19 expr: expr . '.' OBJECTID '(' expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   35     | expr . '+' expr
   36     | expr . '-' expr
   37     | expr . '*' expr
   38     | expr . '/' expr
   40     | expr . '<' expr
   41     | expr . LE expr
   42     | expr . '=' expr

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    ';'  shift, and go to state 78


State 53

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}' ';'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    '~'         shift, and go to state 51

    $default  reduce using rule 17 (expr)

    expr  go to state 79


State 54

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 80


State 55

   19 expr: expr . '.' OBJECTID '(' expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   25     | IF expr . THEN expr ELSE expr FI
   35     | expr . '+' expr
   36     | expr . '-' expr
   37     | expr . '*' expr
   38     | expr . '/' expr
   40     | expr . '<' expr
   41     | expr . LE expr
   42     | expr . '=' expr

    THEN  shift, and go to state 81
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 56

   28 expr: LET OBJECTID . ':' TYPEID IN expr
   29     | LET OBJECTID . ':' TYPEID ASSIGN expr IN expr
   30     | LET OBJECTID . ':' TYPEID ASSIGN expr let_expr_list IN expr
   31     | LET OBJECTID . ':' TYPEID let_expr_list IN expr

    ':'  shift, and go to state 82


State 57

   19 expr: expr . '.' OBJECTID '(' expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | WHILE expr . LOOP expr POOL
   35     | expr . '+' expr
   36     | expr . '-' expr
   37     | expr . '*' expr
   38     | expr . '/' expr
   40     | expr . '<' expr
   41     | expr . LE expr
   42     | expr . '=' expr

    LOOP  shift, and go to state 83
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 58

   19 expr: expr . '.' OBJECTID '(' expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' OBJECTID '(' ')'
   22     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   32     | CASE expr . OF case_list ESAC
   35     | expr . '+' expr
   36     | expr . '-' expr
   37     | expr . '*' expr
   38     | expr . '/' expr
   40     | expr . '<' expr
   41     | expr . LE expr
   42     | expr . '=' expr
